# sycl-cg-matrix-free

./: .gitignore  LICENSE  README.md
sycl/: CMakeLists.txt  main.cpp  readme.md  src.hpp  utils.hpp
